# QQ-bot

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  SPEC.md  TODOS.md  bot.py  deploy.sh  docker-compose.yml  health_check.py  nb.toml  pyproject.toml  requirements.txt  求职自荐材料_张文元.md
docs/: interview-faq.md
llm_adapter/: __init__.py  base.py  deepseek.py  longcat.py  ollama.py  pollinations.py  search.py
plugins/admin/: __init__.py
plugins/broadcast/: __init__.py
plugins/chat/: __init__.py
plugins/scheduler/: __init__.py
qq_bot/: config.py  debug_logger.py
qq_bot/access/: guard.py  models.py
qq_bot/admin/: routes.py
qq_bot/agent/: __init__.py  builder.py  bus.py  core.py  executor.py  planner.py  reflector.py  response.py  router.py  runner.py  sanitize.py  state.py  tools.py
qq_bot/config/: settings.py
qq_bot/llm/: __init__.py  base.py  deepseek.py  gateway.py  glm_4v.py  image_gen.py  longcat.py  noobai_workflow.json  ollama.py
scripts/: live_test.py
tests/: conftest.py  test_access_guard.py  test_agent_builder.py  test_agent_executor.py  test_agent_integration.py  test_agent_loop.py  test_agent_planner.py  test_agent_reflector.py  test_agent_response.py  test_agent_router.py  test_agent_runner.py  test_agent_sanitize.py  test_agent_state.py  test_agent_tools.py  test_broadcast.py  test_chat_plugin.py  test_config.py  test_integration.py  test_llm_adapter.py  test_llm_gateway.py  test_llm_glm.py  test_memory_store.py  test_scheduler.py  test_tool_registry.py  test_tools_core.py  test_url_validator.py
(+70 files in other folders)
