[project]
name = "qq-bot"
version = "2.0.0"
description = "NoneBot2 QQ Bot Agent V2"
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot",
    "nonebot-plugin-apscheduler",
    "httpx",
    "python-dotenv",
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
docs = ["nonebot-plugin-docs"]

[tool.nonebot]
plugins = ["qq_bot.plugins"]
